[package]
name = "Demo_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-rt = "2.7.0"
actix-service = "2.0.2"
actix-cors = "0.6.3"
log = "0.4.14"
env_logger = "0.9.0"
diesel_migrations = "2.0.0"
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.62"
dotenv = "0.15.0"
futures = "0.3.12"
failure = "0.1.8"
derive_more = "0.99.11"
jsonwebtoken = "8.1.1"
bcrypt = "0.13.0"

[dependencies.diesel]
version = "2.0.0"
features = ["postgres", "r2d2", "chrono"]

[dependencies.chrono]
version = "0.4.22"
features = ["serde"]

[dependencies.uuid]
version = "1.1.2"
features = ["v4"]
